[gd_scene load_steps=2 format=3 uid="uid://b7k2nav7x8naq"]

[ext_resource type="Script" uid="uid://c2saq7t2sxcur" path="res://scripts/GenerationPanel.gd" id="1_gen_panel"]

[node name="GenerationPanel" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gen_panel")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üè≠ GENERACI√ìN"
horizontal_alignment = 1

[node name="ResourcesSection" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="ResourcesHeader" type="Label" parent="MainContainer/ResourcesSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üì¶ RECURSOS DISPONIBLES"
horizontal_alignment = 1

[node name="ResourceContainer" type="HBoxContainer" parent="MainContainer/ResourcesSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GeneratorsSection" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="GeneratorsHeader" type="Label" parent="MainContainer/GeneratorsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üè≠ GENERADORES"
horizontal_alignment = 1
